--- a/ureport2-console/pom.xml
+++ b/ureport2-console/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>ureport2-console</artifactId>
-	<version>2.3.0-SNAPSHOT</version>
+	<version>1.1.0</version>
 	<parent>
 		<groupId>com.bstek.ureport</groupId>
 		<artifactId>ureport2-parent</artifactId>
